# shrtnr

./: .env  Cargo.toml  LICENSE.md  bacon.toml  lcov.info  readme.md
migrations/: 20220914002924_create_links_table.sql
scripts/: drop-test-dbs.sh
src/: generate_random_short_id.rs  lib.rs  main.rs
src/api/: mod.rs  redirect_to_link.rs
src/api/links/: create_link.rs  get_link.rs  mod.rs
src/routes/: health_check.rs  hello.rs  mod.rs
src/routes/links/: create_link.rs  get_link.rs  mod.rs  redirect_link.rs
tests/: create_link_tests.rs  test_health_check.rs  tests.rs
tests/common/: db_startup.rs  mod.rs
tests/create_link/: mod.rs  test_get_404.rs  test_post_invalid_url.rs  test_post_success_body.rs  test_post_with_empty_body.rs  test_post_with_empty_url.rs  test_post_with_faulty_db.rs
tests/get_link/: mod.rs  test_get_link_successfully.rs  test_get_with_faulty_db.rs
tests/redirect_to_link/: mod.rs  test_get_redirected_failure_on_non_existing.rs  test_get_redirected_stores_analytics.rs  test_get_redirected_successfully.rs
