[package]
name = "shrtnr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
actix-web = "4"
chrono = { version = "0.4.15", features = ["serde"]}
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono" ] }
uuid = "1.1.2"
rand = "0.8.5"
