[package]
name = "shrtnr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.15", features = ["serde"]}
env_logger = "0.9.0"
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono", "migrate", "uuid", "json" ] }
uuid = { version = "1.1.2", features = ["v4"] }
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.21.1", features = ["full"] }

[profile.release]
strip = true
# If release build is increasingly slow, change lto to "thin"
lto = "fat"
# Uncomment bellow to decrease build size slighly
codegen-units = 1